--- a/editable.html
+++ b/editable.html
@@ -72,7 +72,7 @@ window.addEventListener('scroll', function() {
     navbar.classList.remove('shrink');
   }
 });</script>
-    <style class="silex-inline-styles">.body-initial {background-color: rgba(255,255,255,1); position: static;}.silex-id-1478366444112-1 {background-color: rgba(154,187,254,1); position: static; margin-top: -1px; opacity: 0.8;}.silex-id-1478366444112-0 {background-color: rgba(154,187,254,1); min-height: 100px; position: relative; margin-left: auto; margin-right: auto; opacity: 0.8;}.silex-id-1474394621033-3 {position: static; margin-top: -1px;}.silex-id-1474394621032-2 {background-color: transparent; min-height: 600px; position: relative; margin-left: auto; margin-right: auto;}.silex-id-1478366450713-3 {background-color: transparent; position: static; margin-top: -1px;}.silex-id-1478366450713-2 {background-color: transparent; min-height: 100px; position: relative; margin-left: auto; margin-right: auto;}.silex-id-1708376442818-3 {position: static;}.silex-id-1708376442819-4 {min-height: 100px; background-color: rgb(255, 255, 255); position: relative; margin-left: auto; margin-right: auto;}.silex-id-1708378918663-0 {width: 100px; min-height: 100px; background-color: rgb(255, 255, 255); position: absolute; top: 168px; left: 577.9999694824219px;}.silex-id-1708379957585-2 {width: 299px; min-height: 125px; background-color: rgb(255, 255, 255); position: absolute; top: -23.999986439943314px; left: 456.986083984375px;}@media only screen and (max-width: 480px) {}</style>
+    <style class="silex-inline-styles">.body-initial {background-color: rgba(255,255,255,1); position: static;}.silex-id-1478366444112-1 {background-color: rgba(154,187,254,1); position: static; margin-top: -1px; opacity: 0.8;}.silex-id-1478366444112-0 {background-color: rgba(154,187,254,1); min-height: 100px; position: relative; margin-left: auto; margin-right: auto; opacity: 0.8;}.silex-id-1474394621033-3 {position: static; margin-top: -1px;}.silex-id-1474394621032-2 {background-color: transparent; min-height: 600px; position: relative; margin-left: auto; margin-right: auto;}.silex-id-1478366450713-3 {background-color: transparent; position: static; margin-top: -1px;}.silex-id-1478366450713-2 {background-color: transparent; min-height: 100px; position: relative; margin-left: auto; margin-right: auto;}.silex-id-1708376442818-3 {position: static;}.silex-id-1708376442819-4 {min-height: 100px; background-color: rgb(255, 255, 255); position: relative; margin-left: auto; margin-right: auto;}.silex-id-1708378918663-0 {width: 100px; min-height: 100px; background-color: rgb(255, 255, 255); position: absolute; top: 168px; left: 577.9999694824219px;}.silex-id-1708379957585-2 {width: 1393px; min-height: 125px; background-color: rgb(255, 255, 255); position: absolute; top: 9.555549621582031px; left: -110.77777862548828px;}@media only screen and (max-width: 480px) {}</style>
     <title></title>
     
 
@@ -111,7 +111,9 @@ window.addEventListener('scroll', function() {
 
 
 <section data-silex-type="container-element" class="container-element editable-style silex-id-1478366444112-1 section-element prevent-resizable page-page-1 paged-element hide-on-mobile" data-silex-id="silex-id-1478366444112-1" style="">
-        <nav data-silex-type="container-element" class="editable-style silex-element-content silex-id-1478366444112-0 container-element website-width" data-silex-id="silex-id-1478366444112-0" style=""><div data-silex-type="html-element" class="editable-style html-element silex-id-1708379957585-2" data-silex-id="silex-id-1708379957585-2" style=""><div class="silex-element-content"><nav id="navbar" class="navbar">
+        <nav data-silex-type="container-element" class="editable-style silex-element-content silex-id-1478366444112-0 container-element website-width" data-silex-id="silex-id-1478366444112-0" style=""></nav>
+    </section><section data-silex-type="container-element" class="container-element editable-style silex-id-1474394621033-3 section-element prevent-resizable page-page-1 paged-element" data-silex-id="silex-id-1474394621033-3" style="">
+        <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1474394621032-2 container-element website-width selected" data-silex-id="silex-id-1474394621032-2" style=""><div data-silex-type="container-element" class="editable-style container-element silex-id-1708378918663-0" data-silex-id="silex-id-1708378918663-0" style=""></div><div data-silex-type="html-element" class="editable-style html-element silex-id-1708379957585-2" data-silex-id="silex-id-1708379957585-2" style=""><div class="silex-element-content"><nav id="navbar" class="navbar">
     <a href="#" class="logo">Your Logo</a>
     <ul class="nav-links">
       <li><a href="#">Home</a></li>
@@ -124,9 +126,7 @@ window.addEventListener('scroll', function() {
   <!-- Your content goes here -->
   <div class="content">
     <!-- Add your content here -->
-  </div></div></div></nav>
-    </section><section data-silex-type="container-element" class="container-element editable-style silex-id-1474394621033-3 section-element prevent-resizable page-page-1 paged-element" data-silex-id="silex-id-1474394621033-3" style="">
-        <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1474394621032-2 container-element website-width selected" data-silex-id="silex-id-1474394621032-2" style=""><div data-silex-type="container-element" class="editable-style container-element silex-id-1708378918663-0" data-silex-id="silex-id-1708378918663-0" style=""></div></div>
+  </div></div></div></div>
     </section><section data-silex-type="container-element" class="container-element editable-style silex-id-1478366450713-3 section-element prevent-resizable page-page-1 paged-element" data-silex-id="silex-id-1478366450713-3">
         <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1478366450713-2 container-element website-width" data-silex-id="silex-id-1478366450713-2">
 
