--- a/editable.html
+++ b/editable.html
@@ -72,7 +72,7 @@ window.addEventListener('scroll', function() {
     navbar.classList.remove('shrink');
   }
 });</script>
-    <style class="silex-inline-styles">.body-initial {background-color: rgba(255,255,255,1); position: static;}.silex-id-1474394621033-3 {position: static; margin-top: -1px;}.silex-id-1474394621032-2 {background-color: transparent; min-height: 600px; position: relative; margin-left: auto; margin-right: auto;}.silex-id-1478366450713-3 {background-color: transparent; position: static; margin-top: -1px;}.silex-id-1478366450713-2 {background-color: transparent; min-height: 100px; position: relative; margin-left: auto; margin-right: auto;}.silex-id-1708376442818-3 {position: static;}.silex-id-1708376442819-4 {min-height: 100px; background-color: rgb(255, 255, 255); position: relative; margin-left: auto; margin-right: auto;}.silex-id-1708378918663-0 {width: 100px; min-height: 100px; background-color: rgb(255, 255, 255); position: absolute; top: 168px; left: 577.9999694824219px;}.silex-id-1708379957585-2 {width: 1393px; min-height: 125px; background-color: rgb(255, 255, 255); position: static; top: 9.555549621582031px; left: -110.77777862548828px;}.silex-id-1708380206408-3 {width: 100px; min-height: 438.4444580078125px; background-color: rgb(255, 255, 255); position: absolute; top: 486px; left: 544px;}@media only screen and (max-width: 480px) {}</style>
+    <style class="silex-inline-styles">.body-initial {background-color: rgba(255,255,255,1); position: static;}.silex-id-1708376442818-3 {position: static;}.silex-id-1708376442819-4 {min-height: 100px; background-color: rgb(255, 255, 255); position: relative; margin-left: auto; margin-right: auto;}.silex-id-1708380278623-4 {width: 1201px; min-height: 93px; background-color: rgb(255, 255, 255); position: absolute; top: -7px; left: 0px;}.silex-id-1708380442835-5 {position: static;}.silex-id-1708380442835-6 {min-height: 100px; background-color: rgb(255, 255, 255); position: relative; margin-left: auto; margin-right: auto;}@media only screen and (max-width: 480px) {}</style>
     <title></title>
     
 
@@ -110,7 +110,7 @@ window.addEventListener('scroll', function() {
 
 
 
-<section data-silex-type="container-element" class="editable-style section-element silex-id-1474394621033-3 page-page-1 paged-element" data-silex-id="silex-id-1474394621033-3" style=""><div data-silex-type="container-element" class="editable-style container-element silex-id-1474394621032-2 website-width" data-silex-id="silex-id-1474394621032-2" title="" style=""><div data-silex-type="container-element" class="editable-style container-element silex-id-1708378918663-0" data-silex-id="silex-id-1708378918663-0" style=""></div><div data-silex-type="html-element" class="editable-style html-element silex-id-1708379957585-2" data-silex-id="silex-id-1708379957585-2" style=""><div class="silex-element-content"><nav id="navbar" class="navbar">
+<section data-silex-type="container-element" class="editable-style section-element silex-id-1708376442818-3 page-page-1 paged-element" data-silex-id="silex-id-1708376442818-3" style=""><div data-silex-type="container-element" class="editable-style container-element silex-id-1708376442819-4 silex-element-content website-width prevent-draggable" data-silex-id="silex-id-1708376442819-4" style=""><div data-silex-type="html-element" class="editable-style html-element silex-id-1708380278623-4 page-page-1 paged-element" data-silex-id="silex-id-1708380278623-4" style=""><div class="silex-element-content"><nav id="navbar" class="navbar">
     <a href="#" class="logo">Your Logo</a>
     <ul class="nav-links">
       <li><a href="#">Home</a></li>
@@ -118,14 +118,4 @@ window.addEventListener('scroll', function() {
       <li><a href="#">Services</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
-  </nav>
-
-  <!-- Your content goes here -->
-  <div class="content">
-    <!-- Add your content here -->
-  </div></div></div><div data-silex-type="container-element" class="editable-style container-element silex-id-1708380206408-3" data-silex-id="silex-id-1708380206408-3" style=""></div></div></section><section data-silex-type="container-element" class="container-element editable-style silex-id-1478366450713-3 section-element prevent-resizable page-page-1 paged-element" data-silex-id="silex-id-1478366450713-3">
-        <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1478366450713-2 container-element website-width" data-silex-id="silex-id-1478366450713-2">
-
-            
-        </div>
-    </section><section data-silex-type="container-element" class="editable-style section-element silex-id-1708376442818-3 page-page-1 paged-element" data-silex-id="silex-id-1708376442818-3"><div data-silex-type="container-element" class="editable-style container-element silex-id-1708376442819-4 silex-element-content website-width prevent-draggable" data-silex-id="silex-id-1708376442819-4"></div></section></body></html>
+  </nav></div></div></div></section><section data-silex-type="container-element" class="editable-style section-element silex-id-1708380442835-5 page-page-1 paged-element" data-silex-id="silex-id-1708380442835-5"><div data-silex-type="container-element" class="editable-style container-element silex-id-1708380442835-6 silex-element-content website-width prevent-draggable" data-silex-id="silex-id-1708380442835-6"></div></section></body></html>
